--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -2,26 +2,32 @@ name: Scheduled Repo Sync
 
 on:
   schedule:
-    - cron: '0 * * * *'
-  workflow_dispatch: 
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
-  sync_with_upstream:
+  sync:
     runs-on: ubuntu-latest
-    name: Sync main with upstream
-    
     steps:
-    - name: Checkout target repo
-      uses: actions/checkout@v4
-      with:
-        ref: main
-        token: ${{ secrets.SYNC_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.SYNC_TOKEN }}
+          fetch-depth: 0
 
-    - name: Sync Upstream
-      uses: aormsby/Fork-Sync-With-Upstream-action@v3.4.1
-      with:
-        target_repo_token: ${{ secrets.SYNC_TOKEN }}
-        upstream_sync_repo: derlemue/villa-kunterbunt
-        upstream_sync_branch: main
-        target_sync_branch: main
-        test_mode: false
+      - name: Sync Upstream
+        run: |
+          # 1. Identität setzen
+          git config user.name "GitHub Action"
+          git config user.email "action@github.com"
+          
+          # 2. Upstream hinzufügen und fetch
+          git remote add upstream https://github.com/derlemue/villa-kunterbunt.git
+          git fetch upstream
+          
+          # 3. Main-Branch sicherstellen und mergen
+          git checkout main
+          git merge upstream/main --ff-only || (echo "Merge conflict - manual intervention required" && exit 1)
+          
+          # 4. In deinen Fork pushen
+          git push origin main
