--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -17,17 +17,16 @@ jobs:
 
       - name: Sync Upstream
         run: |
-          # 1. Identität setzen
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
           
-          # 2. Upstream hinzufügen und fetch
+          # Upstream Repo hinzufügen
           git remote add upstream https://github.com/derlemue/villa-kunterbunt.git
           git fetch upstream
           
-          # 3. Main-Branch sicherstellen und mergen
+          # In den main-Branch wechseln und mergen
           git checkout main
-          git merge upstream/main --ff-only || (echo "Merge conflict - manual intervention required" && exit 1)
+          git merge upstream/main --ff-only
           
-          # 4. In deinen Fork pushen
+          # Änderungen in deinen Fork pushen
           git push origin main
