--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Deploy Github Pages
 
 on:
   push:
@@ -16,35 +16,36 @@ concurrency:
 
 jobs:
   build:
-    # GEÄNDERT: Nutzt deinen VPS-Runner
     runs-on: [self-hosted, vps-debian]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      # Fix für Docker-Berechtigungen (wichtig auf Debian VPS)
-      - name: Fix workspace permissions
-        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
+      - name: Fix permissions
+        run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          mkdir -p ./_site
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
-        
+
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
-          
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./_site/
 
   deploy:
+    needs: build
+    runs-on: [self-hosted, vps-debian]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    # GEÄNDERT: Nutzt deinen VPS-Runner
-    runs-on: [self-hosted, vps-debian]
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
