fix: update workflow paths to use nested .github/workflows directory

--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -8,5 +8,5 @@ on:
 
 jobs:
   call-automerge:
-    uses: lemueIO/.github/workflows/automerge.yml@main
+    uses: lemueIO/.github/.github/workflows/automerge.yml@main
     secrets: inherit
