--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -17,5 +17,5 @@ concurrency:
 
 jobs:
   call-deploy-pages:
-    uses: lemueIO/.github/workflows/deploy-pages.yml@main
+    uses: lemueIO/.github/.github/workflows/deploy-pages.yml@main
     secrets: inherit
