--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -7,5 +7,5 @@ on:
 
 jobs:
   call-sync-fork:
-    uses: lemueIO/.github/workflows/sync-fork.yml@main
+    uses: lemueIO/.github/.github/workflows/sync-fork.yml@main
     secrets: inherit
