--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -6,6 +6,11 @@ on:
   check_run:
     types: [completed]
 
+permissions:
+  contents: write
+  pull-requests: write
+
+
 jobs:
   call-automerge:
     uses: lemueIO/.github/.github/workflows/automerge.yml@main
