--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -5,6 +5,10 @@ on:
     - cron: '00 */2 * * *'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
+
 jobs:
   call-sync-fork:
     uses: lemueIO/.github/.github/workflows/sync-fork.yml@main
