--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -6,7 +6,12 @@ on:
   check_run:
     types: [completed]
 
+permissions:
+  contents: write
+  pull-requests: write
+
+
 jobs:
   call-automerge:
-    uses: lemueIO/.github/workflows/automerge.yml@main
+    uses: lemueIO/.github/.github/workflows/automerge.yml@main
     secrets: inherit
