--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -2,10 +2,10 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '*/15 * * * *' # Alle 15 Minuten
-  workflow_dispatch: # Erlaubt den manuellen Start zum Testen
+    - cron: '*/15 * * * *' # Tipp: Nutzen Sie unterschiedliche Minuten für verschiedene Forks (z.B. 7, 22, 37...)
+  workflow_dispatch:
 
-# NEU: Verhindert parallele Ausführung dieses Workflows
+# FIX 1: Concurrency verhindert, dass zwei Sync-Jobs für dasselbe Repo gleichzeitig laufen
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
@@ -16,15 +16,15 @@ permissions:
 jobs:
   sync:
     runs-on: [self-hosted, vps-debian]
-    if: github.repository != 'derlemue/villa-kunterbunt' # Verhindert Ausführung im Original-Repo (derlemue)
-steps:
-      # Schritt 1: Sicherstellen, dass der Workspace sauber ist
+    if: github.repository != 'derlemue/villa-kunterbunt'
+    
+    # KORREKTUR: 'steps' muss hier eingerückt sein (Teil von 'sync')
+    steps:
       - name: Clean Workspace
         run: |
-          # Löscht rekursiv alle Dateien im aktuellen Verzeichnis vor dem Checkout
-          rm -rf * rm -rf .git
+          rm -rf ./*
+          rm -rf ./.git
 
-      # Schritt 2: Checkout mit 'clean: true' (Standard, aber hier explizit zur Sicherheit)
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -37,20 +37,30 @@ steps:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: Sync with Upstream
+      - name: Sync with Upstream and Restore Config
         run: |
-          # URL des Original-Repositories (Quelle für alle Forks)
           UPSTREAM_URL="https://github.com/derlemue/villa-kunterbunt.git"
           
-          echo "Füge Upstream hinzu: $UPSTREAM_URL"
+          echo "Upstream Remote einrichten..."
           git remote add upstream "$UPSTREAM_URL" || git remote set-url upstream "$UPSTREAM_URL"
-          
-          echo "Fetch Upstream..."
           git fetch upstream
           
-          echo "Merge Upstream/main..."
-          # Wir nutzen --allow-unrelated-histories falls nötig, meistens aber nicht
-          git merge upstream/main --no-edit
+          echo "Reset auf Upstream (Hard Reset)..."
+          # Wir zwingen den lokalen Stand auf das Original. 
+          # Damit wird die History sauber, aber Ihre Config ist kurzzeitig weg.
+          git checkout main
+          git reset --hard upstream/main
           
-          echo "Push zu Origin..."
-          git push origin main
+          echo "Wiederherstellen der Custom-Workflow-Datei..."
+          # Wir holen uns die Datei explizit aus DEINEM Repository (origin) zurück
+          # Das stellt sicher, dass Ihre Fixes (Concurrency, Cleanup) erhalten bleiben
+          git checkout origin/main -- .github/workflows/sync-fork.yml
+          
+          echo "Commit der Custom-Config..."
+          # Falls sich die Datei unterscheidet, erstellen wir einen Commit
+          git add .github/workflows/sync-fork.yml
+          git commit -m "Keep custom sync-fork.yml configuration" || echo "Keine Änderungen nötig"
+          
+          echo "Force Push zu Origin..."
+          # Force Push ist notwendig, da wir die History neu geschrieben haben
+          git push origin main --force
