--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -11,9 +11,15 @@ permissions:
   pages: write
   id-token: write
 
-
-
 jobs:
   call-deploy-pages:
     uses: lemueIO/.github/.github/workflows/deploy-pages.yml@main
     secrets: inherit
+    
+- name: Cleanup workspace
+        if: always() # Läuft auch, wenn der Job fehlschlägt
+        run: |
+          echo "Cleaning up workspace on VPS..."
+          rm -rf "${{ github.workspace }}"/*
+          # Löscht Docker-Leichen, falls vorhanden
+          docker system prune -f --volumes || true
