--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -17,3 +17,11 @@ jobs:
   call-deploy-pages:
     uses: lemueIO/.github/.github/workflows/deploy-pages.yml@main
     secrets: inherit
+
+- name: Cleanup workspace
+        if: always() # Läuft auch, wenn der Job fehlschlägt
+        run: |
+          echo "Cleaning up workspace on VPS..."
+          rm -rf "${{ github.workspace }}"/*
+          # Löscht Docker-Leichen, falls vorhanden
+          docker system prune -f --volumes || true
