--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -1,43 +1,15 @@
-name: Sync Fork
+# DATEI: (Im Fork) .github/workflows/my-schedule.yml
+name: Fork Sync Scheduler
 
 on:
-  workflow_call:
+  schedule:
+    - cron: '*/30 * * * *' # Alle 30 Minuten
   workflow_dispatch:
 
-permissions:
-  contents: write
-  actions: write
-
 jobs:
-  sync:
-    # Führt den Job nur aus, wenn das Repository NICHT das Original ist
-    if: github.repository != 'derlemue/villa-kunterbunt'
-    runs-on: [self-hosted, vps-debian]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: main
-          fetch-depth: 0
-
-      - name: Configure Git
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
-
-      - name: Sync with Upstream
-        run: |
-          UPSTREAM_URL="https://github.com/derlemue/villa-kunterbunt.git"
-          git remote add upstream "$UPSTREAM_URL" || git remote set-url upstream "$UPSTREAM_URL"
-          git fetch upstream main
-          git merge upstream/main --no-edit || exit 1
-          git push origin main
-
-      - name: Cleanup workspace
-        if: always()
-        run: |
-          echo "Cleaning up workspace on VPS..."
-          rm -rf "${{ github.workspace }}"/*
-          # Hält Docker sauber
-          docker system prune -f --volumes || true
+  call-central-logic:
+    # Hier rufen wir die Zentrale an
+    uses: lemueIO/.github/.github/workflows/central-sync-logic.yml@main
+    with:
+      upstream_url: "https://github.com/derlemue/villa-kunterbunt.git"
+    secrets: inherit # Wichtig, falls Tokens benötigt werden
