--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -1,8 +1,6 @@
-name: Automerge Caller
+name: Fork Automerge Caller
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
   pull_request_review:
     types: [submitted]
   check_run:
@@ -12,8 +10,7 @@ permissions:
   contents: write
   pull-requests: write
 
-
 jobs:
-  call-automerge:
-    uses: lemueIO/.github/.github/workflows/automerge.yml@main
+  automerge:
+    uses: lemueIO/.github/.github/workflows/central-automerge-logic.yml@main
     secrets: inherit
