--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -6,11 +6,11 @@ on:
   check_run:
     types: [completed]
 
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
   automerge:
+    # Berechtigungen müssen direkt im Job stehen
+    permissions:
+      contents: write
+      pull-requests: write
     uses: lemueIO/.github/.github/workflows/central-automerge-logic.yml@main
     secrets: inherit
