--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -2,18 +2,16 @@ name: Sync Fork Caller
 
 on:
   schedule:
-    - cron: '00 */2 * * *'
-  workflow_dispatch:
+    - cron: '0 0 * * *'
+  workflow_dispatch: {}
 
-# Wir definieren die Permissions hier global...
+# Globale Berechtigungen für das Token des Callers
 permissions:
   contents: write
+  workflows: write
 
 jobs:
-  call-sync-fork:
-    # ...und stellen sicher, dass der Job sie auch wirklich anwenden darf
-    permissions:
-      contents: write
+  call-sync:
     uses: lemueIO/.github/.github/workflows/central-sync-logic.yml@main
     with:
       upstream_url: "https://github.com/derlemue/villa-kunterbunt.git"
