Fix: Harmonize workflow permissions with lemueIO standards

--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -11,6 +11,8 @@ jobs:
     # Berechtigungen müssen direkt im Job stehen
     permissions:
       contents: write
-      pull-requests: write
+      pages: write
+      id-token: write
+      workflows: write
     uses: lemueIO/.github/.github/workflows/central-automerge-logic.yml@main
     secrets: inherit
