Fix: Harmonize workflow permissions with lemueIO standards

--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -11,8 +11,7 @@ jobs:
     # Berechtigungen müssen direkt im Job stehen
     permissions:
       contents: write
-      pages: write
-      id-token: write
+      pull-requests: write
       workflows: write
     uses: lemueIO/.github/.github/workflows/central-automerge-logic.yml@main
     secrets: inherit
