--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -3,7 +3,7 @@ name: Sync Fork Caller
 on:
   schedule:
     - cron: '0 0 * * *'
-  workflow_dispatch: {}
+  workflow_dispatch:
 
 # Globale Berechtigungen für das Token des Callers
 permissions:
