Fix: Re-enable upstream_url input for sync

--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -18,4 +18,6 @@ jobs:
       contents: write
       pull-requests: write
     uses: lemueIO/.github/.github/workflows/central-sync-logic.yml@main
+    with:
+      upstream_url: "https://github.com/derlemue/villa-kunterbunt.git"
     secrets: inherit
