--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -17,4 +17,5 @@ jobs:
     uses: lemueIO/.github/.github/workflows/central-pages-logic.yml@main
     with:
       publish_dir: '.'
+      runs_on: 'ubuntu-latest'
     secrets: inherit
