Fix: Skip sync workflow on source repository (derlemue/villa-kunterbunt)

--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -13,6 +13,7 @@ permissions:
 
 jobs:
   call-sync-fork:
+    if: github.repository != 'derlemue/villa-kunterbunt'
     # ...und stellen sicher, dass der Job sie auch wirklich anwenden darf
     permissions:
       contents: write
