Infra: Switch deployment to self-hosted runners
- Changed deploy workflow from ubuntu-latest to self-hosted
- Utilizes the 4 available workers instead of GitHub-hosted runners
- Improves deployment speed and resource efficiency

--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -17,5 +17,5 @@ jobs:
     uses: lemueIO/.github/.github/workflows/central-pages-logic.yml@main
     with:
       publish_dir: '.'
-      runs_on: 'ubuntu-latest'
+      runs_on: 'self-hosted'
     secrets: inherit
