--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -3,7 +3,7 @@ name: Sync Fork Caller
 # Harmonization update
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '*/15 * * * *'  # Every 15 minutes
   workflow_dispatch:
 
 # Globale Berechtigungen für das Token des Callers
