--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -14,8 +14,7 @@ jobs:
       contents: write
       pages: write
       id-token: write
-    uses: lemueIO/.github/.github/workflows/central-pages-logic.yml@main
     with:
       publish_dir: '.'
-      runs_on: 'ubuntu-latest'
+      runs_on: ${{ github.repository != 'derlemue/villa-kunterbunt' && 'self-hosted' || 'ubuntu-latest' }}
     secrets: inherit
