Fix: Restore missing 'uses' key in deploy workflow
- Accidentally removed central workflow reference during dynamic runner logic optimization
- Restored 'uses: lemueIO/.github/.github/workflows/central-pages-logic.yml@main'
- Kept dynamic runner selection intact

--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -11,9 +11,8 @@ jobs:
   deploy:
     # Hier werden die Pages- und Token-Rechte weitergegeben
     permissions:
-      contents: write
-      pages: write
       id-token: write
+    uses: lemueIO/.github/.github/workflows/central-pages-logic.yml@main
     with:
       publish_dir: '.'
       runs_on: ${{ github.repository != 'derlemue/villa-kunterbunt' && 'self-hosted' || 'ubuntu-latest' }}
