Fix: Restore full-length audiobooks and stabilize deployment
- Restored 47MB audiobook files for Main and Cowork (replaced incorrect 17MB fragments)
- Added concurrency cancel-in-progress to deploy workflow to resolve 'Waiting' lockups
- Re-tagged restored audio for consistency
- Updated CHANGELOG to reflect reality

--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -7,6 +7,10 @@ on:
       - main
   workflow_dispatch:
 
+concurrency:
+  group: pages-deploy-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   deploy:
     # Hier werden die Pages- und Token-Rechte weitergegeben
