--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: pages-deploy-${{ github.ref }}
+  group: pages-deploy-force-reset-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
