--- a/.github/workflows/deploy-pages-caller.yml
+++ b/.github/workflows/deploy-pages-caller.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   deploy:
     permissions:
-      contents: read
+      contents: write
       pages: write
       id-token: write
     uses: lemueIO/.github/.github/workflows/central-pages-logic.yml@main
