fix: harmonize workflow runners for forks to use ubuntu-latest

--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -16,4 +16,6 @@ jobs:
       contents: write
       pull-requests: write
     uses: lemueIO/.github/.github/workflows/central-automerge-logic.yml@main
+    with:
+      runs_on: ${{ (github.repository == 'lemueIO/villa-kunterbunt' || github.repository == 'derlemue/villa-kunterbunt') && 'self-hosted' || 'ubuntu-latest' }}
     secrets: inherit
