--- a/.github/workflows/sync-fork-caller.yml
+++ b/.github/workflows/sync-fork-caller.yml
@@ -13,5 +13,5 @@ jobs:
     uses: lemueIO/.github/.github/workflows/central-sync-logic.yml@main
     with:
       upstream_url: "https://github.com/derlemue/villa-kunterbunt.git"
-      runs_on: 'self-hosted'
+      runs_on: 'ubuntu-latest'
     secrets: inherit
