fix: exclude derlemue repo from self-hosted runner requirement

--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -17,5 +17,5 @@ jobs:
       pull-requests: write
     uses: lemueIO/.github/.github/workflows/central-automerge-logic.yml@main
     with:
-      runs_on: ${{ (github.repository == 'lemueIO/villa-kunterbunt' || github.repository == 'derlemue/villa-kunterbunt') && 'self-hosted' || 'ubuntu-latest' }}
+      runs_on: ${{ github.repository == 'lemueIO/villa-kunterbunt' && 'self-hosted' || 'ubuntu-latest' }}
     secrets: inherit
