fix: rename automerge caller and restrict to original repo

--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -1,5 +1,4 @@
-
-name: Fork Automerge Caller
+name: Automerge Caller
 
 # Harmonization update
 on:
@@ -11,6 +10,7 @@ on:
 
 jobs:
   automerge:
+    if: github.repository == 'derlemue/villa-kunterbunt'
     # Berechtigungen müssen direkt im Job stehen
     permissions:
       contents: write
