--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -2,6 +2,8 @@ name: Automerge Caller
 
 # Harmonization update
 on:
+  pull_request:
+    types: [opened, synchronize, reopened]
   pull_request_review:
     types: [submitted]
   check_run:
