--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -2,9 +2,9 @@ name: Automerge Caller
 
 # Harmonization update
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, synchronize, reopened]
-  pull_request_review:
+  pull_request_review_target:
     types: [submitted]
   check_run:
     types: [completed]
