fix: correct invalid event name pull_request_review_target to pull_request_review

--- a/.github/workflows/automerge-caller.yml
+++ b/.github/workflows/automerge-caller.yml
@@ -4,7 +4,7 @@ name: Automerge Caller
 on:
   pull_request_target:
     types: [opened, synchronize, reopened]
-  pull_request_review_target:
+  pull_request_review:
     types: [submitted]
   check_run:
     types: [completed]
